# zerolist

./: .clang-format  .gitignore  CMakeLists.txt  README.md  zerolist.c  zerolist.h
example/: example.c
